--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,14 +9,22 @@
 @import "./components/hero-button";
 @import "./components/modal";
 @import "./components/backdrop";
+@import "./components/button-close";
+@import "./components/form-modal";
+@import "./components/textarea";
+@import "./components/checkbox";
+@import "./components/button-form";
 @import "./components/section";
+@import "./components/section-title";
+@import "./components/section-title-list";
 @import "./components/section-quality";
 @import "./components/section-work";
 @import "./components/section-team";
-@import "./components/team-social";
+@import "./components/team-card";
 @import "./components/section-clients";
 @import "./components/footer";
 @import "./components/footer-logo";
 @import "./components/footer-site-adress";
 @import "./components/footer-icon";
 @import "./components/footer-form";
+@import "./components/buttom-footer";
