--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -6,4 +6,5 @@ $accent-color: #2196F3;
 $button-background-color: #F5F4FA;
 $text-color-white: #FFFFFF;
 $text-color-black: #000000;
+$icon-color: #AFB1B8;
 $timing-function: cubic-bezier(0.4,0,0.2,1);
