--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -212,313 +212,12 @@ body {
   color: #2196F3;
 }
 
-.hero {
-  text-align: center;
-}
-
-.hero-overlay {
-  height: 600px;
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/images/hero.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  padding-top: 200px;
-}
-
-.hero-title {
-  color: #FFFFFF;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
-  width: 696px;
-}
-
-.hero-button {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  background: #2196F3;
-  color: #FFFFFF;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  align-items: center;
-  letter-spacing: 0.06em;
-  cursor: pointer;
-  font-family: Roboto, sans-serif;
-  border-radius: 4px;
-  padding: 10px 32px;
-  min-width: 216px;
-  border: none;
-}
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  min-height: 581px;
-  min-width: 528px;
-  background-color: #FFFFFF;
-  display: flex;
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  flex-direction: column;
-  padding: 40px;
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden.modal {
-  transform: translate(-50%, -50%) scale(0, 9);
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.btn-close {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30px;
-  height: 30px;
-  background-color: #FFFFFF;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  left: 490px;
-  top: 8px;
-}
-
-.btn-close__icon {
-  background: #FFFFFF;
-  fill: rgb(0, 0, 0);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn-close__icon:hover {
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: #2196F3;
-}
-
-.form {
-  display: flex;
-}
-
-.modal-form {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.modal-form__title {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  color: #212121;
-  width: 448px;
-  margin-bottom: 12px;
-}
-
-.modal-form__icon {
-  position: absolute;
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  transform: translateY(-50%);
-  fill: #212121;
-  top: 60%;
-  left: 12px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__field {
-  position: relative;
-  width: 448px;
-}
-.modal-form__field:focus-within > .modal-form__icon {
-  fill: #2196F3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-form__field:focus-within > .modal-form__input {
-  outline: none;
-  border: 1px solid #2196F3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__label {
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: #757575;
-  margin-bottom: 4px;
-}
-
-.modal-form__input {
-  width: 448px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  height: 40px;
-  margin-bottom: 10px;
-  margin-top: 0;
-  padding-left: 42px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.textarea {
-  display: flex;
-  flex-direction: column;
-}
-
-.textarea-comment {
-  resize: none;
-  width: 448px;
-  height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  padding: 12px 16px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.textarea-comment:focus {
-  outline: none;
-  border: 1px solid #2196F3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-::-moz-placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-:-ms-input-placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-::placeholder {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.terms {
-  color: #2196F3;
-}
-
-.label {
-  display: inline-block;
-  align-items: center;
-  padding-left: 36px;
-  margin-top: 20px;
-}
-
-.checkbox {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-  left: 0;
-}
-.checkbox:checked + .checkbox-icon {
-  border-color: transparent;
-  background-color: #2196F3;
-  background-image: url(/images/check\ \(1\).svg);
-  background-size: contain;
-  background-origin: border-box;
-  width: 16px;
-  height: 15px;
-  left: 52px;
-}
-
-.checkbox-icon {
-  margin-right: 10px;
-  display: inline-block;
-  width: 16px;
-  height: 15px;
-  border: 2px solid #212121;
-  border-radius: 2px;
-  position: absolute;
-  left: 52px;
-  outline: none;
-}
-
-.button-form {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 30px;
-  width: 200px;
-  height: 50px;
-  background: #2196F3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  font-family: Roboto, sans-serif;
-  align-items: center;
-  letter-spacing: 0.06em;
-  color: #FFFFFF;
-  border: none;
-  cursor: pointer;
-  padding: 10px 52px;
-}
-
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.section-title {
-  color: #212121;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.167;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.section-title-list {
-  color: #212121;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.43;
-  text-transform: uppercase;
-  margin-bottom: 11px;
-}
-
-.quality {
+.types {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -532,157 +231,137 @@ body {
   overflow: hidden;
 }
 
-.quality-list {
+.container-btn {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.btn-list {
+  display: flex;
+  transition: 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-list__item {
+  margin-right: 8px;
+  transition: 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-list__item:hover, .btn-list__item:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-list__item:last-child {
+  margin-right: 0;
+}
+
+.btn-list__button {
+  color: #212121;
+  background-color: #F5F4FA;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  text-align: center;
+  cursor: pointer;
+  font-family: Roboto, sans-serif;
+  border-radius: 4px;
+  padding: 6px 22px;
+  display: inline-block;
+  min-width: 112px;
+  border: none;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-list__button:hover, .btn-list__button:focus {
+  color: #FFFFFF;
+  background-color: #2196F3;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list {
   display: flex;
   flex-wrap: wrap;
 }
 
-.quality-list__item {
-  width: 270px;
+.portfolio-list__item {
+  width: 370px;
   margin-right: 30px;
-}
-.quality-list__item:last-child {
-  margin-right: 0;
-}
-
-.quality-list__pictures {
-  width: 270px;
-  height: 120px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #F5F4FA;
-  border-radius: 4px;
   margin-bottom: 30px;
 }
 
-.work {
-  padding-top: 0;
+.image {
+  display: block;
+  text-decoration: none;
 }
 
-.work-list {
-  display: flex;
-}
-
-.work-list__item {
-  width: 370px;
-  margin-right: 30px;
-}
-.work-list__item:last-child {
-  margin-right: 0;
-}
-
-.work-list__img {
+.port-overlay {
+  width: "370px";
+  height: "294px";
   position: relative;
-  z-index: -1;
-}
-
-.work-list__text {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 370px;
-  height: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  color: #FFFFFF;
-  background: rgba(47, 48, 58, 0.8);
-}
-
-.section-team {
-  background-color: #F5F4FA;
-}
-
-.team-list {
-  display: flex;
-}
-
-.team-item {
-  background: #FFFFFF;
-  margin-right: 30px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   display: block;
-  text-align: center;
+  text-decoration: none;
+  overflow: hidden;
 }
-.team-item:last-child {
+
+.img-overlay {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 294px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  color: #FFFFFF;
+  background: rgba(33, 150, 243, 0.9);
+  padding: 63px 24px;
+  opacity: 0;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list .image:hover .img-overlay {
+  opacity: 1;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(-100%);
+}
+
+.portfolio-list .image:focus .img-overlay {
+  opacity: 1;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(-100%);
+}
+
+.portfolio-list .image:hover,
+.portfolio-list .image:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-list .item:nth-child(3n) {
   margin-right: 0;
 }
 
-.team-item__name {
+.portfolio-list .item:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+
+.portfolio-img {
+  padding: 20px 24px;
+  border-left: 1px solid #FFFFFF;
+  border-right: 1px solid #FFFFFF;
+  border-bottom: 1px solid #FFFFFF;
+}
+
+.signature {
   color: #212121;
-  font-weight: 500;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-bottom: 4px;
+}
+
+.text {
+  color: #757575;
   font-size: 16px;
-  line-height: 1.19;
-  margin-bottom: 10px;
-  margin-top: 30px;
-}
-
-.team-item__position {
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  display: block;
-  margin-bottom: 16px;
-}
-
-.team-social {
-  display: flex;
-  margin-bottom: 30px;
-  justify-content: center;
-}
-
-.team-social__item {
-  margin: 0 10px 0 0;
-}
-
-.team-social__icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  fill: #AFB1B8;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.team-social__icon:hover, .team-social__icon:focus {
-  fill: #FFFFFF;
-  background: #2196F3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.client-list {
-  display: flex;
-  justify-content: space-between;
-}
-
-.client-list__areal {
-  display: flex;
-  border: 1px solid #AFB1B8;
-  border-radius: 4px;
-  width: 170px;
-  height: 92px;
-  justify-content: center;
-  align-items: center;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.client-list__areal:hover > svg, .client-list__areal:focus > svg {
-  fill: #2196F3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.client-list__areal:hover, .client-list__areal:focus {
-  border-color: #2196F3;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.client-list__icon {
-  fill: #AFB1B8;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: 1.875;
 }
 
 .footer {
@@ -869,4 +548,4 @@ body {
   position: absolute;
   left: 148px;
   top: 13px;
-}/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=portfolio.css.map */
