--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -286,13 +286,33 @@ body {
   margin-right: 30px;
   margin-bottom: 30px;
 }
+.portfolio-list__item:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio-list__item:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
 
-.image {
+.portfolio-list__image {
   display: block;
   text-decoration: none;
 }
+.portfolio-list__image:hover .portfolio-list__img-overlay {
+  opacity: 1;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(-100%);
+}
+.portfolio-list__image:focus .portfolio-list__img-overlay {
+  opacity: 1;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translateY(-100%);
+}
+.portfolio-list__image:hover, .portfolio-list__image:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-.port-overlay {
+.portfolio-list__overlay {
   width: "370px";
   height: "294px";
   position: relative;
@@ -301,7 +321,7 @@ body {
   overflow: hidden;
 }
 
-.img-overlay {
+.portfolio-list__img-overlay {
   position: absolute;
   display: block;
   width: 100%;
@@ -316,40 +336,14 @@ body {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-list .image:hover .img-overlay {
-  opacity: 1;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(-100%);
-}
-
-.portfolio-list .image:focus .img-overlay {
-  opacity: 1;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(-100%);
-}
-
-.portfolio-list .image:hover,
-.portfolio-list .image:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-list .item:nth-child(3n) {
-  margin-right: 0;
-}
-
-.portfolio-list .item:nth-last-child(-n+3) {
-  margin-bottom: 0;
-}
-
-.portfolio-img {
+.portfolio_list__text {
   padding: 20px 24px;
   border-left: 1px solid #FFFFFF;
   border-right: 1px solid #FFFFFF;
   border-bottom: 1px solid #FFFFFF;
 }
 
-.signature {
+.portfolio_list__signature {
   color: #212121;
   font-weight: 700;
   font-size: 18px;
@@ -358,7 +352,7 @@ body {
   margin-bottom: 4px;
 }
 
-.text {
+.portfolio_list__about {
   color: #757575;
   font-size: 16px;
   line-height: 1.875;
