--- a/sass/components/_portfolio_cards.scss
+++ b/sass/components/_portfolio_cards.scss
@@ -7,12 +7,42 @@
     width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
+
+    &:nth-child(3n) {
+        margin-right: 0;
+        }
+        
+        &:nth-last-child(-n+3) {
+        margin-bottom: 0;
+        }
+        
     }
-    .image {
+    .portfolio-list__image {
     display: block; 
     text-decoration: none;
+
+    &:hover .portfolio-list__img-overlay {
+        opacity: 1;
+        transition: 250ms $timing-function;
+        transform: translateY(-100%);
+        
+    }
+    &:focus .portfolio-list__img-overlay {
+        opacity: 1;
+        transition: 250ms $timing-function;
+        transform: translateY(-100%);
+    }
+
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+         0px 4px 4px rgba(0, 0, 0, 0.06),
+         1px 4px 6px rgba(0, 0, 0, 0.16);
+      transition: 250ms $timing-function;
+    }
      } 
-    .port-overlay {
+
+    .portfolio-list__overlay {
         width:"370px";
         height:"294px";
         position: relative;
@@ -20,7 +50,7 @@
        text-decoration: none;
           overflow: hidden;
     }
-     .img-overlay {
+     .portfolio-list__img-overlay {
         position: absolute;
         display: block;
         width: 100%;
@@ -34,41 +64,15 @@
          opacity: 0;
         transition: 250ms $timing-function;
      }  
-    .portfolio-list .image:hover .img-overlay {
-        opacity: 1;
-        transition: 250ms $timing-function;
-        transform: translateY(-100%);
         
-    }
-    .portfolio-list .image:focus .img-overlay {
-        opacity: 1;
-        transition: 250ms $timing-function;
-        transform: translateY(-100%);
-    }
-    
-    .portfolio-list .image:hover,
-    .portfolio-list .image:focus {
-        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-         0px 4px 4px rgba(0, 0, 0, 0.06),
-         1px 4px 6px rgba(0, 0, 0, 0.16);
-      transition: 250ms $timing-function;
-    }
-    .portfolio-list .item:nth-child(3n) {
-    margin-right: 0;
-    }
-    
-    .portfolio-list .item:nth-last-child(-n+3) {
-    margin-bottom: 0;
-    }
-    
-    .portfolio-img {
+    .portfolio_list__text {
     padding: 20px 24px;
     border-left: 1px solid $text-color-white;
     border-right: 1px solid $text-color-white;
     border-bottom: 1px solid $text-color-white;
     }
     
-    .signature {
+    .portfolio_list__signature {
     color: $primary-text-color;
     font-weight: 700;
     font-size: 18px;
@@ -78,7 +82,7 @@
     
     }
     
-    .text {
+    .portfolio_list__about {
     color: $secondary-text-color;
     font-size: 16px;
     line-height: 1.875;
