--- a/sass/components/_footer-logo.scss
+++ b/sass/components/_footer-logo.scss
@@ -1,19 +1,6 @@
-.footer-logo {
-    display: inline-block;
+.logo-footer {
     padding-bottom: 20px;
     color: $text-color-white;
-    font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    text-decoration: none;
-    transition: 250ms $timing-function;
-
-    &:hover,
-    &:focus{
-    color: $accent-color;
-    transition: 250ms $timing-function;
-    }
-    }
+      }
     
    
