--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -28,7 +28,7 @@ left: 0;
 &:checked + .checkbox-icon {
 border-color: transparent;
 background-color: $accent-color; 
-background-image: url(/images/check\ \(1\).svg);
+background-image: url(../images/check\ \(1\).svg);
 background-size: contain;
 background-origin: border-box ;
 width: 16px;
