--- a/css/main.css
+++ b/css/main.css
@@ -453,7 +453,7 @@ body {
 .checkbox:checked + .checkbox-icon {
   border-color: transparent;
   background-color: #2196F3;
-  background-image: url(/images/check\ \(1\).svg);
+  background-image: url(../images/check\ \(1\).svg);
   background-size: contain;
   background-origin: border-box;
   width: 16px;
